<resources>
    <string name="app_name">TastyTravel</string>
    <string name="continue_to_main">Continue Without An Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_prompt">Don\'t have an Account? SIGN UP</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mainbackground">mainbackground</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1Ijoiam9obmRvd2F0ZXIiLCJhIjoiY2szcWNjdHIyMDA3cDNlcGlseWt3cjRiNiJ9.Bu2jIzXSGZNcxQBtGCrwbQ</string>
    <string name="saved_places">Saved Places</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="food_collage">Food collage</string>
    <string name="profile">Profile</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string-array name="spinner_items">
        <item>Bar</item>
        <item>Cafe</item>
...
    </string>
    <string name="about_pizza_background">Pizza background</string>
    <string name="suggested_places">Suggested Places</string>
    <string name="enter_another_location">Enter Another Location</string>
    <string name="current_location">Current Location</string>
    <string name="enter_your_location">Enter Your Location</string>
    <string name="close">Close</string>
    <string name="walk">Walk</string>
    <string name="car">Car</string>
    <string name="bike">Bike</string>
    <string name="delete">Delete Account</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map_saved_places">Saved Places On Map</string>
    <string name="settings_explanation_isochrone">The isochrone is made up of coordinates that join together
        to form a perimeter around the locations. They represent how far a person can reach within a
        certain amount of time. Turn it ON/OFF depending on your preference.
    </string>
    <string name="settings_explanation_midpoint">Your location and Their location are shown as red
        markers. The best meeting point is shown as a blue marker. If you do not want to
        see the best meeting place marker, you can also turn it ON/OFF depending on your preference.
    </string>
    <string name="clear_favs">Clear Favourites</string>
    <string name="clear_history">Clear History</string>
    <string name="find_places_to_meet">FIND PLACES TO MEET</string>
    <string name="my_saved_places">My Saved Places</string>
    <string name="my_history">My History</string>
    <string name="image_of_beers">image of beers.</string>
    <string name="image_of_coffees">image of coffees.</string>

</resources>

