<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:elevation="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textColor="@color/red_orange"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mainbackground"
        android:layout_width="414dp"
        android:layout_height="274dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/mainbackground"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mainbackground" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="306dp"
        android:layout_height="45dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/activity_main_search_button"
        android:elevation="10dp"
        android:text="@string/find_places_to_meet"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/mainbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SearchView
        android:id="@+id/SearchView"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:clickable="false"
        android:elevation="11dp"
        app:layout_constraintBottom_toBottomOf="@+id/searchBtn"
        app:layout_constraintEnd_toEndOf="@+id/searchBtn"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="@+id/searchBtn"
        app:layout_constraintTop_toTopOf="@+id/searchBtn" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BFA5"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainbackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/savedPlacesBtn"
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="24dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/activity_main_food_button"
                android:contentDescription="@string/image_of_coffees"
                android:scaleType="fitXY"
                app:layout_constraintHorizontal_bias="0.5"
                app:srcCompat="@drawable/activity_main_coffee" />

            <TextView
                android:id="@+id/savedPlacesText"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_alignStart="@id/savedPlacesBtn"
                android:layout_alignTop="@id/savedPlacesBtn"
                android:layout_alignEnd="@id/savedPlacesBtn"
                android:layout_alignBottom="@id/savedPlacesBtn"
                android:layout_marginStart="150dp"
                android:layout_marginTop="97dp"
                android:background="@drawable/text_border"
                android:gravity="bottom|center"
                android:text="@string/my_saved_places"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/historyBtn"
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:layout_below="@+id/savedPlacesBtn"
                android:layout_marginTop="24dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/activity_main_food_button"
                android:contentDescription="@string/image_of_beers"
                android:scaleType="fitXY"
                app:layout_constraintHorizontal_bias="0.5"
                app:srcCompat="@drawable/activity_main_beer" />

            <TextView
                android:id="@+id/historyText"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_alignStart="@id/historyBtn"
                android:layout_alignTop="@id/historyBtn"
                android:layout_alignEnd="@id/historyBtn"
                android:layout_alignBottom="@id/historyBtn"
                android:layout_marginStart="202dp"
                android:layout_marginTop="97dp"
                android:background="@drawable/text_border"
                android:gravity="bottom|center"
                android:text="@string/my_history"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>