<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:title="Home"
        android:icon="@drawable/menu_home_icon"/>

    <item
        android:id="@+id/menu_about"
        android:title="About"
        android:icon="@drawable/menu_about_icon"/>

    <item
        android:id="@+id/menu_profile"
        android:title="Profile"
        android:icon="@drawable/menu_profile_icon"/>

</menu>
