<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProfileActivity">

    <Button
        android:id="@+id/deleteFavsBtn"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/activity_profile_white_button"
        android:text="@string/clear_favs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clearHistoryBtn"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/activity_profile_white_button"
        android:text="@string/clear_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteFavsBtn" />

    <Button
        android:id="@+id/settingsBtn"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/activity_profile_white_button"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearHistoryBtn" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/activity_profile_white_button"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsBtn" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BFA5"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:background="@color/red_orange"
        android:text="@string/delete"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>